--- a/src/Sandbox/client/src/scss/base_imports/variable_imports/_layout-variables.scss
+++ b/src/Sandbox/client/src/scss/base_imports/variable_imports/_layout-variables.scss
@@ -5,6 +5,7 @@
  */
 
 // Layout modifiers (use to set padding or margin)
+$layout-modifier-xs: 0.3rem;
 $layout-modifier-sm: 2.4rem;
 $layout-modifier-lg: $layout-modifier-sm * 2;
 $layout-modifier-xl: $layout-modifier-sm * 6;
