--- a/src/Sandbox/client/src/components/directives/fm-footer-directive/fm-footer-style.scss
+++ b/src/Sandbox/client/src/components/directives/fm-footer-directive/fm-footer-style.scss
@@ -38,7 +38,7 @@
       color: $color-white;
       text-transform: uppercase;
       font-weight: $font-weight-semibold;
-      letter-spacing: 0.3rem;
+      letter-spacing: $layout-modifier-xs;
       font-size: $font-size-h6;
     }
 
