--- a/src/Sandbox/client/src/components/directives/fm-navbar-directive/fm-navbar-style.scss
+++ b/src/Sandbox/client/src/components/directives/fm-navbar-directive/fm-navbar-style.scss
@@ -21,7 +21,7 @@
            font-size: $font-size-h6;
            text-transform: uppercase;
            font-weight: $font-weight-semibold;
-           letter-spacing: 0.3rem;
+           letter-spacing: $layout-modifier-xs;
            color: $color-text-primary;
            position: relative; 
 
