--- a/src/Sandbox/client/src/scss/base_imports/_buttons.scss
+++ b/src/Sandbox/client/src/scss/base_imports/_buttons.scss
@@ -5,12 +5,12 @@
  */
 
 .fm-button {
-  border-radius: 0.2rem;
+  border-radius: $layout-modifier-xs;
   background-color: $color-dark-grey;
   color: $color-white;
   text-transform: uppercase;
   font-weight: $font-weight-semibold;
-  letter-spacing: 0.3rem;
+  letter-spacing: $layout-modifier-xs;
   font-size: $font-size-h6;
   padding: 1.5rem 6rem;
   outline: 0;
@@ -26,8 +26,8 @@
     border: 1px solid $color-white;
 
     &:hover, &:active {
-       background-color: rgba(255, 255, 255, 0.15);
-       color: $color-white;
+      background-color: rgba(255, 255, 255, 0.15);
+      color: $color-white;
     }
   }
 
@@ -36,8 +36,49 @@
     border: 0;
 
     &:hover, &:active {
-       background-color: $color-accent-shade;
-       color: $color-white;
+      background-color: $color-accent-shade;
+      color: $color-white;
+    }
+  }
+}
+
+
+.fm-ball {
+  background-color: $color-accent;
+  height: 4.5rem;
+  width: 4.5rem;
+  border-radius: 50%;
+  margin: 0 auto;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  transition: background-color ease-in-out $animation-transition-short;
+  color: $color-white;
+  padding: 0;
+  overflow: hidden;
+  font-weight: $font-weight-semibold;
+  //font-weight: $font-weight-bold;
+  font-size: 1.5rem;
+
+  &:hover {
+    cursor: pointer;
+    background-color: $color-accent-shade;
+    color: $color-white;
+  }
+
+  span {
+    margin: 0 auto;
+    display: block;
+  }
+
+  &.ball-outline {
+    background-color: transparent;
+    //border: 2px solid $color-accent;
+    color: $color-accent;
+
+    &:hover {
+      //border: 2px solid $color-accent-shade;
+      color: $color-accent-shade;
     }
   }
 }
