--- a/src/Sandbox/client/src/scss/base_imports/_helper-classes.scss
+++ b/src/Sandbox/client/src/scss/base_imports/_helper-classes.scss
@@ -45,6 +45,10 @@
   color: $color-accent !important;
 }
 
+.text-warning {
+  color: $color-red !important;
+}
+
 .text-truncate {
   max-width: 45rem;
   white-space: nowrap;
@@ -80,7 +84,15 @@
 ---------------------------*/
 
 .no-margin {
-  margin: 0;
+  margin: 0 !important;
+}
+
+/*---------------------------
+  padding-helpers:                     
+---------------------------*/
+
+.no-padding {
+  padding: 0 !important;
 }
 
 /*---------------------------
@@ -105,4 +117,15 @@
 
 .display-flex {
   display: flex !important;
+}
+
+/*---------------------------
+  background-helpers:                     
+---------------------------*/
+.background-light {
+  background-color: $color-white;
+}
+
+.background-dark {
+  background-color: $color-light-grey;
 }
