--- a/src/Sandbox/client/src/scss/base_imports/variable_imports/_font-variables.scss
+++ b/src/Sandbox/client/src/scss/base_imports/variable_imports/_font-variables.scss
@@ -22,7 +22,8 @@ $font-size-h5: 1.8rem;
 $font-size-h6: 1.2rem;
 $font-size-base: 1.8rem;
 
-/*$font-size-base: 1.8rem;
+/*
+$font-size-base: 1.8rem;
 $font-size-modifier: $ratio-golden;
 
 // Sizes
